fixed overflow and new designed sinin/up

--- a/src/styles.css
+++ b/src/styles.css
@@ -43,6 +43,7 @@ table {
   border-collapse: collapse;
   width: 100%;
   margin: 5px 5px 0px 5px;
+  table-layout:fixed;
 }
 
 tr:nth-last-child(2) {
@@ -62,6 +63,9 @@ td {
   border-bottom: 1px solid #ddd;
   border-bottom-color: rgb(42, 185, 252);
   padding-left: 5px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 td:first-child {
